FIX overflow error

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,7 @@ body {
   font-size: 1.4rem;
   font-family: $font-sans;
   font-weight: normal;
+  overflow-x: hidden;
 }
 
 // Components
